# music-reader

./: Cargo.toml  LICENSE  Readme.md  flake.nix
src/: cache.rs  draw.rs  main.rs  ui.rs
