[package]
name = "music-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
poppler-rs = "0.22"
cairo-rs = "0.18.3"
glib-macros = "0.18.3"
gio = "0.18.3"
glib = "0.18.3"
clap = { version = "4.4.6", features = ["derive"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
async-channel = "2.1.0"
